[package]
name = "st7789-examples"
version = "0.1.0"
authors = ["Ales Katona <almindor@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
display-interface = "0.3"
display-interface-spi = "0.3.1"
embedded-graphics = "0.6.2"
embedded-hal = "0.2.3"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
st7789 = "0.5.0"

[dependencies.nrf52832-hal]
version = "0.10.0"
default-features = false
features = ["xxAA-package", "rt"]
