[package]
name = "st7789-examples"
version = "0.6.0"
authors = ["Ales Katona <almindor@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
embedded-hal = "0.2"
cortex-m-semihosting = "0.3"
panic-halt = "0.2"
st7789 = "0.6"

[dependencies.nrf52832-hal]
version = "0.12"
default-features = false
features = ["xxAA-package", "rt"]
